fix: mejorar estilos en componentes y páginas; ajustar transiciones y agregar enlace a GitHub

--- a/src/components/ProblemaCard.astro
+++ b/src/components/ProblemaCard.astro
@@ -2,7 +2,7 @@
 const { titulo, descripcion, linkProblema } = Astro.props;
 ---
 
-<li class="border border-slate-300 dark:border-slate-700 rounded-md overflow-hidden">
+<li class="border-2 border-slate-700/50 bg-slate-50 dark:bg-slate-950 rounded-md overflow-hidden">
   <div class="flex group  justify-between items-center px-4 py-3 bg-slate-100 dark:bg-slate-800 hover:bg-slate-200 dark:hover:bg-slate-700 transition-colors duration-100">
     <a
       href=`${titulo}-problema`
