--- a/src/layouts/LayoutMD.astro
+++ b/src/layouts/LayoutMD.astro
@@ -15,6 +15,13 @@ import { ClientRouter } from "astro:transitions";
     <ClientRouter />
   </head>
   <body class="flex flex-col min-h-screen relative">
+    <a
+      class="p-2 z-50 w-fit fixed"
+      target="_blank"
+      href="https://github.com/IGnacho12/Soft-Share"
+    >
+      <img class="dark:inverted dark:invert" src="assets/github.svg" alt="" />
+    </a>
     <!-- Fondos -->
     <!-- Fondo modo claro  -->
     <div
@@ -43,12 +50,30 @@ import { ClientRouter } from "astro:transitions";
 </html>
 
 <style>
+  @font-face {
+    font-family: "ones";
+    src: url("/Onest-Variable.ttf");
+  }
   html,
   body {
     margin: 0;
     width: 100%;
     min-height: 100%;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: "ones", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  /* Oculta la barra de scroll pero mantiene el scroll funcional */
+  html {
+    overflow-y: scroll; /* Asegura que el scroll esté activo */
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE/Edge */
+  }
+
+  html::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera */
+  }
+
+  html {
+    overflow-y: scroll;
   }
 </style>
