--- a/src/pages/[id]-problema.astro
+++ b/src/pages/[id]-problema.astro
@@ -20,7 +20,7 @@ const fm = module.frontmatter || {}; // 👈 aseguramos que exista
 ---
 
 <LayoutMD>
-  <main class="w-11/12 lg:w-5/6 xl:w-9/12 mt-16 bg-slate-50 dark:bg-slate-950 border-2 border-slate-700 rounded-sm mx-auto py-4 px-8 mb-24">
+  <main class="w-11/12 lg:w-5/6 xl:w-9/12 mt-16 bg-slate-50 dark:bg-slate-950 border-2 border-slate-700 rounded-sm mx-auto py-4 px-8 mb-24 problema">
     <h1 class="text-2xl font-bold mb-4">{fm.title}</h1>
     <p class="text-gray-600 dark:text-gray-400 mb-6">{fm.description}</p>
 
