Cambios en las guías

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -68,7 +68,7 @@ import { ClientRouter } from "astro:transitions";
     margin: 0;
     width: 100%;
     min-height: 100%;
-    font-family: "ones", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "ones", "Segoe UI", "Times New Roman"
   }
 
   /* Oculta la barra de scroll pero mantiene el scroll funcional */
