Añadir la biblioteca Mousetrap y configurar atajos de teclado para búsqueda y navegación

--- a/src/components/programas/SearchBtn.astro
+++ b/src/components/programas/SearchBtn.astro
@@ -7,7 +7,7 @@
     <input
       id="inputSearch"
       type="text"
-      placeholder="Buscar programas..."
+      placeholder="Ctrl+Shift+K"
       class="transition-all duration-300 ease-in-out focus:outline-none bg-white dark:bg-slate-800 text-black dark:text-white px-4 py-2 rounded-md border-2 border-slate-300 dark:border-slate-600 focus:ring-2 focus:ring-blue-500 w-0 focus:w-[15em] md:w-[15em] font-bold"
     />
     <button id="btnSearch" class="btn p-2 hover:rotate-6 transition-transform">
